--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
  <!DOCTYPE HTML>
-<!--
-	Miniport by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Fundacón GSL</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/icono.ico" />
 	</head>
 	<body class="is-preload">
 
@@ -17,9 +14,10 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Inicio</a></li>
-					<li><a href="#work">Quienes Somos</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#work">Quiénes Somos</a></li>
+					<li><a href="#portfolio">Servicios</a></li>
 					<li><a href="#contact">Contacto</a></li>
+					<li><a href="#donar">Cómo Donar</a></li>
 				</ul>
 			</nav>
 
@@ -32,93 +30,109 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hola. Somos <strong>FundaGuaduas</strong>.</h1>
+								<h1>Hola. Somos <strong>Fundación GSL</strong>.</h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
+							<p><strong>GSL</strong> Fundación Inclusiva de Apoyo a Personas Vulnerables, "Guaduas Sin Límites". Estamos para servir.</p>
+							<a href="#work" class="button large scrolly">Los invitamos a conocer mas...</a>
 						</div>
 					</div>
 				</div>
 			</article>
 
 		<!-- Work -->
-			<article id="work" class="wrapper style2">
-				<div class="container">
+			<article  class="wrapper style2">
+				<div class="container" id="work">
+					<p> &nbsp;</p>
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>¿Quiénes Somos?</h2>
+						<p>Somos una fundación inclusiva sin ánimo de lucrio, que brinda servicios de apoyo a población vulnerable en Guadua.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Misión</h3>
+								<p>Mejorar la calidad de vida de adultos mayores, personas con discapacidad, personal privado de la libertad
+							       y población vulnerable, brindando ambientes de bienestar, recreación, educación y servicio social.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Visión</h3>
+								<p>Ser una fundación reconocida a nivel nacional e internacional por los servicios prestados, los cuales benefician
+									a las poblaciones mas vulnerables y desamparadas de nuestra región.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Horario de Atención</h3>
+								<p>Lunes a viernes de 8a.m. a 5p.m.</p>
+								<p>Dirección: Calle 2 # 10-25 Barrio San José</p>
+								<p>Guaduas Cundinamarca</p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+						<p></p>
+						<a href="#portfolio" class="button large scrolly">Conoce Nuestros Servicios</a>
 					</footer>
 				</div>
-			</article>
+			</article> 
 
 		<!-- Portfolio -->
-			<article id="portfolio" class="wrapper style3">
-				<div class="container">
+			<article  class="wrapper style3">
+				<div class="container" id="portfolio">
+					<p> &nbsp;</p>
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Sevicios Prestados a Nuestra Comunidad.</h2>
+						<p>GSL Fundación Inclusiva de Apoyo a Personas Vulnerables, "Guaduas Sin Límites" Nuestras Actividades:</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#actividad1" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<h3><a href="#actividad1">Actividades De Desarrollo Social</a></h3>
+								<p>Propicia un desarrollo social e integral en las comunidades, mediante la proteccción. asistencia y
+								   promoción de los derechos a las diferentes poblaciones en situación de vulnerabilidad.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Actividades Pedagógicas</a></h3>
+								<p></p>
+								<p>Se apoya con refuerzos de aprendizaje, alfabetización, procesos pedagogicos, fomación académica y cultural
+									de todas aquellas personas vinculadas a la fundación.</p>
+								<p></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Actividades de Rehabilitación</a></h3>
+								<p></p>
+								<p>Se brinda atención profesional que permite mejorar las habilidades y destrezas motoras de las personas
+									vulnerables que lo requieren y hacen parte de la fundación.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Actividades de Desarrollo Empresarial</a></h3>
+								<p>Se realiza promoción del desarrollo empresarial y el emprendimiento con las personas vinculadas
+									a la fundación, pues su finalidad es tener un ingreso económico de los proyectos producctivos
+									que veneficien a los integrantes de la fundación.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Actividades de Protección del Medio Ambiente</a></h3>
+								<p>Se trabaja por la conservación, recuperación y protección. manejo, uso y aprovechamiento de los
+									recursos naturales renovables y del medio ambiente.</p>
+								<p></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -130,18 +144,47 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
+						<a href="#contact" class="button large scrolly">Contactanos...</a>
 					</footer>
 				</div>
 			</article>
 
+			<!-- Actividad 1 -->
+			<article id="actividad1" class="wrapper style1">
+				<div class="container">
+					<div >
+						<div class="col-8 col-7-large col-12-medium">
+								<h1><strong>Actividades De Desarrollo Social</strong>.</h1>
+							</header>
+							<p>Propicia un desarrollo social e integral en las comunidades, mediante la proteccción. asistencia y
+							  promoción de los derechos a las diferentes poblaciones en situación de vulnerabilidad, como:</p>
+							  <ul style="text-align: left;">
+								<li >
+									Adultos mayores y con discapacidad, brindando un espacio de atención dirigido "pasa día"
+									en donde se realizan actividades lúdico recreativas y de esparcimiento que permiten mejorar
+									su calidad de vida.
+								</li>
+								<li>
+									Personas privadas de la libertad, se brinda atención en actividades que contribuyan con su bienestar,
+									realizando además el acompañamiento profesional para lograr una resocialización y reinserción social.
+								</li>
+								<li>
+									Personas en situación de pobreza extrema o vulnerabilidad, que no cuentan con atenciones o un bienestar social.
+								</li>
+							</ul>
+							  
+							<a href="#contact" class="button large scrolly">Contactanos...</a>
+						</div>
+					</div>
+				</div>
+			</article>
+
 		<!-- Contact -->
-			<article id="contact" class="wrapper style4">
-				<div class="container medium">
+			<article  class="wrapper style4">
+				<div class="container medium" id="contact">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Contactanos, lo haremos juntos.</h2>
+						<p>Fundación Inclusiva de Apoyo a Personas Vulnerables, "Guaduas Sin Límites".</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -196,7 +239,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Fundación GSL. All rights reserved.</li><li>Design: Felix Cruz</a></li>
 						</ul>
 					</footer>
 				</div>
