mejora en textos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 							<header>
 								<h1>Hola. Somos <strong>Fundación GSL</strong>.</h1>
 							</header>
-							<p><strong>GSL</strong> Fundación Inclusiva de Apoyo a Personas Vulnerables, "Guaduas Sin Límites". Estamos para servir.</p>
+							<p><strong>GSL</strong> Fundación Inclusiva sin ánimo de lucro, que apoya a Personas Vulnerables, "Guaduas Sin Límites",
+								de ahora en adelante, lo haremos juntos!!!</p>
 							<a href="#work" class="button large scrolly">Los invitamos a conocer mas...</a>
 						</div>
 					</div>
@@ -45,7 +46,7 @@
 					<p> &nbsp;</p>
 					<header>
 						<h2>¿Quiénes Somos?</h2>
-						<p>Somos una fundación inclusiva sin ánimo de lucrio, que brinda servicios de apoyo a población vulnerable en Guadua.</p>
+						<p>Somos una fundación inclusiva sin ánimo de lucrio, que brinda servicios de apoyo a población vulnerable en Guaduas.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
@@ -213,7 +214,7 @@
 						</div>
 						<div class="col-12">
 							<hr />
-							<h3>Find me on ...</h3>
+							<h3>Encuéntranos en...</h3>
 							<ul class="social">
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
