mejora en contacto

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<p> &nbsp;</p>
 					<header>
 						<h2>¿Quiénes Somos?</h2>
-						<p>Somos una fundación inclusiva sin ánimo de lucrio, que brinda servicios de apoyo a población vulnerable en Guaduas.</p>
+						<p>Somos una Fundación Inclusiva, sin ánimo de lucho, de Apoyo a Personas Vulnerables, "Guaduas Sin Límites".</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
@@ -184,24 +184,24 @@
 			<article  class="wrapper style4">
 				<div class="container medium" id="contact">
 					<header>
-						<h2>Contactanos, lo haremos juntos.</h2>
-						<p>Fundación Inclusiva de Apoyo a Personas Vulnerables, "Guaduas Sin Límites".</p>
+						<h2>Contactanos.</h2>
+						<p>Teléfonos: 314 277 0959 - 320 767 5272  / Email: fundacionguaduassinlimites@gmail.com.</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
 							<form method="post" action="#">
 								<div class="row">
 									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
+										<input type="text" name="name" id="name" placeholder="Nombres" />
 									</div>
 									<div class="col-6 col-12-small">
 										<input type="text" name="email" id="email" placeholder="Email" />
 									</div>
 									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
+										<input type="text" name="subject" id="subject" placeholder="Asunto" />
 									</div>
 									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
+										<textarea name="message" id="message" placeholder="Mensaje"></textarea>
 									</div>
 									<div class="col-12">
 										<ul class="actions">
