arreglo palabra lucro

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<p> &nbsp;</p>
 					<header>
 						<h2>¿Quiénes Somos?</h2>
-						<p>Somos una Fundación Inclusiva, sin ánimo de lucho, de Apoyo a Personas Vulnerables, "Guaduas Sin Límites".</p>
+						<p>Somos una Fundación Inclusiva, sin ánimo de lucro, de Apoyo a Personas Vulnerables, "Guaduas Sin Límites".</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
@@ -201,7 +201,7 @@
 										<input type="text" name="subject" id="subject" placeholder="Asunto" />
 									</div>
 									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Mensaje"></textarea>
+										<textarea name="message" id="message" placeholder="Deja tu Mensaje"></textarea>
 									</div>
 									<div class="col-12">
 										<ul class="actions">
