--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Fundacón GSL</title>
+		<title>Fundación GSL</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -145,7 +145,7 @@
 						</div>
 					</div>
 					<footer>
-						<a href="#contact" class="button large scrolly">Contactanos...</a>
+						<a href="#contact" class="button large scrolly">Contáctanos...</a>
 					</footer>
 				</div>
 			</article>
@@ -174,7 +174,7 @@
 								</li>
 							</ul>
 							  
-							<a href="#contact" class="button large scrolly">Contactanos...</a>
+							<a href="#contact" class="button large scrolly">Contáctanos...</a>
 						</div>
 					</div>
 				</div>
@@ -184,8 +184,8 @@
 			<article  class="wrapper style4">
 				<div class="container medium" id="contact">
 					<header>
-						<h2>Contactanos.</h2>
-						<p>Teléfonos: 314 277 0959 - 320 767 5272  / Email: fundacionguaduassinlimites@gmail.com.</p>
+						<h2>Contáctanos.</h2>
+						<p>Teléfonos: 314 277 0959 - 320 767 5272  / Email: fundacionguaduassinlimites@gmail.com</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
