--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Inicio</a></li>
-					<li><a href="#work">Quiénes Somos</a></li>
+					<li><a href="#work">Conòzcanos</a></li>
 					<li><a href="#portfolio">Servicios</a></li>
 					<li><a href="#contact">Contacto</a></li>
-					<li><a href="#donar">Cómo Donar</a></li>
+					<li><a href="#donar">Donar</a></li>
 				</ul>
 			</nav>
 
