--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Inicio</a></li>
-					<li><a href="#work">Conòzcanos</a></li>
+					<li><a href="#work">Quiénes Somos</a></li>
 					<li><a href="#portfolio">Servicios</a></li>
 					<li><a href="#contact">Contacto</a></li>
 					<li><a href="#donar">Donar</a></li>
