envio mensaje correcto

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 											<li><input type="submit" value="Enviar" /></li>
 											<li><input type="reset" value="Clear Form" class="alt" /></li>
 											<input type="hidden" name="_captcha" value="false">
-											<input type="hidden" name="_autoresponse" value="felix your custom message">
+											<input type="hidden" name="_next" value="https://fundaciongsl.github.io/web/">
 										</ul>
 									</div>
 								</div>
