--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<li><a href="#top">Inicio</a></li>
 					<li><a href="#work">Quiénes Somos</a></li>
 					<li><a href="#portfolio">Servicios</a></li>
-					<li><a href="#contact">Contacto</a></li>
+					<li><a href="#contact">Contáctanos</a></li>
 					<li><a href="#donar">Donar</a></li>
 				</ul>
 			</nav>
@@ -26,7 +26,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/logo.jpeg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -73,6 +73,14 @@
 								<p>Dirección: Calle 2 # 10-25 Barrio San José</p>
 								<p>Guaduas Cundinamarca</p>
 							</section>
+
+						</div>
+						<div class="col-12 col-12-medium col-12-small">
+							<section class="box style1">
+								<h3>Portafolio</h3>
+								<embed src="images/portafolio.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="600px" />
+							</section>
+
 						</div>
 					</div>
 					<footer>
@@ -136,13 +144,7 @@
 								<p></p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
+						
 					</div>
 					<footer>
 						<a href="#contact" class="button large scrolly">Contáctanos...</a>
@@ -206,7 +208,7 @@
 									<div class="col-12">
 										<ul class="actions">
 											<li><input type="submit" value="Enviar" onclick="sendEmail()" /></li>
-											<li><input type="reset" value="Clear Form" class="alt" /></li>
+											<li><input type="reset" value="Limpiar" class="alt" /></li>
 											<input type="hidden" name="_captcha" value="false">
 											<input type="hidden" name="_next" value="https://fundaciongsl.github.io/web/">
 										</ul>
