--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 									<div class="col-12">
 										<ul class="actions">
 											<li><input type="submit" value="Enviar" onclick="sendEmail()" /></li>
-											<li><input type="reset" value="Limpiar" class="alt" /></li>
+											<li><input type="reset" value="Clear Form" class="alt" /></li>
 											<input type="hidden" name="_captcha" value="false">
 											<input type="hidden" name="_next" value="https://fundaciongsl.github.io/web/">
 										</ul>
