--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 									</div>
 									<div class="col-12">
 										<ul class="actions">
-											<li><input type="submit" value="Enviar" onclick="sendEmail()" /></li>
+											<li><input type="submit" value="Enviar" /></li>
 											<li><input type="reset" value="Clear Form" class="alt" /></li>
 											<input type="hidden" name="_captcha" value="false">
 											<input type="hidden" name="_next" value="https://fundaciongsl.github.io/web/">
