fotos redes sociales

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#actividad1" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#actividad1" class="image featured"><img src="images/desarrollosocial.jpeg" alt="" /></a>
 								<h3><a href="#actividad1">Actividades De Desarrollo Social</a></h3>
 								<p>Propicia un desarrollo social e integral en las comunidades, mediante la proteccción. asistencia y
 								   promoción de los derechos a las diferentes poblaciones en situación de vulnerabilidad.</p>
@@ -109,7 +109,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/pedagogica.jpeg" alt="" /></a>
 								<h3><a href="#">Actividades Pedagógicas</a></h3>
 								<p></p>
 								<p>Se apoya con refuerzos de aprendizaje, alfabetización, procesos pedagogicos, fomación académica y cultural
@@ -119,16 +119,17 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/rehabilitacion.jpg" alt="" /></a>
 								<h3><a href="#">Actividades de Rehabilitación</a></h3>
 								<p></p>
 								<p>Se brinda atención profesional que permite mejorar las habilidades y destrezas motoras de las personas
 									vulnerables que lo requieren y hacen parte de la fundación.</p>
+								<p></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/desarrolloempresarial.png" alt="" /></a>
 								<h3><a href="#">Actividades de Desarrollo Empresarial</a></h3>
 								<p>Se realiza promoción del desarrollo empresarial y el emprendimiento con las personas vinculadas
 									a la fundación, pues su finalidad es tener un ingreso económico de los proyectos producctivos
@@ -137,7 +138,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/ambiente.jpg" alt="" /></a>
 								<h3><a href="#">Actividades de Protección del Medio Ambiente</a></h3>
 								<p>Se trabaja por la conservación, recuperación y protección. manejo, uso y aprovechamiento de los
 									recursos naturales renovables y del medio ambiente.</p>
@@ -220,16 +221,20 @@
 							<hr />
 							<h3>Encuéntranos en...</h3>
 							<ul class="social">
+								<li><a href="https://www.facebook.com/profile.php?id=61550779942936&mibextid=ZbWKwL" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+								<li><a href="https://instagram.com/fundacionguaduassinlimites?igshid=MzRlODBiNWFlZA==" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+								<li><a href="#" class="icon brands fa-skype"><span class="label">Skype</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								
+								<!--
+								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<!--
+								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
+								<li><a href="https://instagram.com/fundacionguaduassinlimites?igshid=MzRlODBiNWFlZA==" class="icon brands fa-instagram"><span>Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
 								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
 								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
