icono whats app

--- a/index.html
+++ b/index.html
@@ -223,12 +223,14 @@
 							<ul class="social">
 								<li><a href="https://www.facebook.com/profile.php?id=61550779942936&mibextid=ZbWKwL" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
 								<li><a href="https://instagram.com/fundacionguaduassinlimites?igshid=MzRlODBiNWFlZA==" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+								<li><a href="https://api.whatsapp.com/send?phone=57142770959" class="icon brands fa-whatsapp" target="_blank"><span class="label">whatsapp</span></a></li>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 								<li><a href="#" class="icon brands fa-skype"><span class="label">Skype</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								
 								
 								<!--
+								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
